wedla adjustments + events

--- a/localisation/TD_03_missions_wedla_l_english.yml
+++ b/localisation/TD_03_missions_wedla_l_english.yml
@@ -34,7 +34,7 @@
  WED_western_bretherens_tt1:0 "Gain claims on every province owned by Bogiland or its subjects in §YBogiland§! region."
  WED_western_bretherens_tt2:0 "Every subject of §YBogilish§! culture will get §G-10%§! §YLiberty Desire§!."
  WED_northern_cities:0 "Northern Cities"
- WED_cities_of_ostemer_tt1:0 "If §YBurghers§! estate has loyalty is §Y70§! or greater:"
+ WED_cities_of_ostemer_tt1:0 "If §YBurghers§! estate loyalty is §Y70§! or greater:"
  WED_economic_boom:0 "Economic Boom"
  WED_the_question_of_drotaci_tt1:0 "If completed by appeasing the Nobility:"
  WED_the_question_of_drotaci_tt2:0 "If completed by weakening the Nobility:"
