--- a/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
+++ b/localisation/TD_01_flavour_ehren_saelianism_l_english.yml
@@ -180,21 +180,21 @@
  td_ehren_saelianism.15.b:0 "Join reformation"
  td_ehren_saelianism.15.c:0 "Cultivate our faith"
 
- td_ehren_saelianism.16.t "Liemarians in our Ranks"
- td_ehren_saelianism.16.desc "It appears that Liemarian movement took roots in our clergy, Sigilianists demand us to force them to renounce their reformist attitude, Moderates just want to leave them alone. Ehrenists share Sigilianist attitude towards this issue but for different reasons."
- td_ehren_saelianism.16.a "Punish reformists"
- td_ehren_saelianism.16.b "Allow them to work"
- td_ehren_saelianism.16.c "Push towards Ehrenism"
+ td_ehren_saelianism.16.t:0 "Liemarians in our Ranks"
+ td_ehren_saelianism.16.desc:0 "It appears that Liemarian movement took roots in our clergy, Sigilianists demand us to force them to renounce their reformist attitude, Moderates just want to leave them alone. Ehrenists share Sigilianist attitude towards this issue but for different reasons."
+ td_ehren_saelianism.16.a:0 "Punish reformists"
+ td_ehren_saelianism.16.b:0 "Allow them to work"
+ td_ehren_saelianism.16.c:0 "Push towards Ehrenism"
  ehren_saelianism_reformation_liemarians_radicals:0 "Reformists Repressed"
  desc_ehren_saelianism_reformation_liemarians_radicals:0 "We demand all reformist elements in our clergy to denounce their teachings"
  ehren_saelianism_reformation_liemarians_moderates:0 "Reformists Accepted"
  desc_hren_saelianism_reformation_liemarians_moderates:0 "Reformation movement is accepted here."
 
- td_ehren_saelianism.17.t "Church Stance"
- td_ehren_saelianism.17.desc "Our entire clergy now needs to mobilise itself and serve one purpose, they are agreeing to do it but we need to choose what goals we want to achieve."
- td_ehren_saelianism.17.a "Defend against reformism"
- td_ehren_saelianism.17.b "Spread our faith"
- td_ehren_saelianism.17.c "Focus on interior"
+ td_ehren_saelianism.17.t:0 "Church Stance"
+ td_ehren_saelianism.17.desc:0 "Our entire clergy now needs to mobilise itself and serve one purpose, they are agreeing to do it but we need to choose what goals we want to achieve."
+ td_ehren_saelianism.17.a:0 "Defend against reformism"
+ td_ehren_saelianism.17.b:0 "Spread our faith"
+ td_ehren_saelianism.17.c:0 "Focus on interior"
  ehren_saelianism_reformation_defensive:0 "Protection Against Reformation"
  desc_hren_saelianism_reformation_defensive:0 "We mobilised our clergy to protect our country from reformation."
  ehren_saelianism_reformation_international:0 "New Crusades"
@@ -202,11 +202,11 @@
  ehren_saelianism_reformation_interior:0 "Faith Consolidation"
  desc_ehren_saelianism_reformation_interior:0 "We mobilised our clergy so we can convert our country."
 
- td_ehren_saelianism.18.t "Liemarianism reach $COUNTRY$"
- td_ehren_saelianism.18.desc "News of reformation has reached our common people, waves of convertion to Liemarianism has begun. Sigilianists want to prevent Liemarianism from spreading even more, Moderates decided that they shouldn't interfere with this, Ehrenists want us to propagate Ehrenian ideas instead to fight with them."
- td_ehren_saelianism.18.a "Stop them from converting"
- td_ehren_saelianism.18.b "Let them convert"
- td_ehren_saelianism.18.c "Help Ehrenists"
+ td_ehren_saelianism.18.t:0 "Liemarianism reaches $COUNTRY$"
+ td_ehren_saelianism.18.desc:0 "News of reformation has reached our common people, waves of convertion to Liemarianism has begun. Sigilianists want to prevent Liemarianism from spreading even more, Moderates decided that they shouldn't interfere with this, Ehrenists want us to propagate Ehrenian ideas instead to fight with them."
+ td_ehren_saelianism.18.a:0 "Stop them from converting"
+ td_ehren_saelianism.18.b:0 "Let them convert"
+ td_ehren_saelianism.18.c:0 "Help Ehrenists"
  ehren_saelianism_events_reformation_sigilianism_practice_tt:0 "Our Ehren Saelian provinces will have a 5% to convert to Liemarianism"
  ehren_saelianism_events_reformation_moderate_practice_tt:0 "Our Ehren Saelian provinces will have a 10% to convert to Liemarianism"
  ehren_saelianism_events_reformation_ehrenism_practice_tt:0 "Our Ehren Saelian provinces will have a 5% to convert to Liemarianism and 5% to convert to Ehren poganism"
