--- a/localisation/TD_03_missions_wedla_l_english.yml
+++ b/localisation/TD_03_missions_wedla_l_english.yml
@@ -1,27 +1,27 @@
 ﻿l_english:
  WED_found_wkkh_title:0 "Establish WKKH"
- WED_found_wkkh_desc:0 ""
+ WED_found_wkkh_desc:0 "Wedlansko-Kakijska Kompanja Handlowa is a theoretical trade company which would focus on transfering the goods from Kakigia and Pemenia into Mezonia and further into the Saelian Empire and Camaria. Empowering it will surely solidify our control over the entire Furmaric Sea and Ostemer trade."
 
  WED_the_show_of_power_title:0 "The Show of Power"
- WED_the_show_of_power_desc:0 ""
+ WED_the_show_of_power_desc:0 "We have been underestimated for too long. Ziemelians managed to take us by surprise and take our lands and Bogiland is only looking for a way to integrate us into their crown. We must show them that we are a force to reckon with."
 
  WED_restore_whats_ours_title:0 "Restore What is Ours"
- WED_restore_whats_ours_desc:0 ""
+ WED_restore_whats_ours_desc:0 "Our eastern territories - most importantly the port of Didisyva -  were lost to Ziemelians in the war of 1342. Since then we've been waiting for an occasion to strike and reconquer them and punish Ziemelia for their outrageous ambitions."
 
  WED_control_over_mezonia_title:0 "Control over Mezonia"
- WED_control_over_mezonia_desc:0 ""
+ WED_control_over_mezonia_desc:0 "Mezonian and Uzkolian straits are the most important straits in this part of the world. Tons of valuable goods move and are taxed through them. If we manage to secure Mezonia the entire Ostemer basin will be in our reach."
 
  WED_Vanquish_Uzkolia_title:0 "Vanquish Uzkolia"
- WED_Vanquish_Uzkolia_desc:0 ""
+ WED_Vanquish_Uzkolia_desc:0 "Uzkolia has been sneakily increasing tolls for ships passing through their strait, which is clearly an attack against our interest. Protecting our merchants by destroying their nation is an obvious choice."
 
  WED_western_bretherens_title:0 "Western Bretherens"
- WED_western_bretherens_desc:0 ""
+ WED_western_bretherens_desc:0 "Authoritarian regime of Bogilish kings can't continue! We must free our bretherens from this occupation by bringing them under our influence and protection."
 
  WED_cities_of_ostemer_title:0 "Cities of Ostemer"
- WED_cities_of_ostemer_desc:0 ""
+ WED_cities_of_ostemer_desc:0 "'Northern Cities' often reffers to major ports along the northern Ostemer coast. Early on they were mostly Silvestrine and Camaria outposts to trade with the native but they quickly grew into bustling cities and sometimes even becoming more powerful than 'Southern Cities'."
 
  WED_the_question_of_drotaci_title:0 "The Question of Drotaci"
- WED_the_question_of_drotaci_desc:0 ""
+ WED_the_question_of_drotaci_desc:0 "Since the integration of Marstonian lands, the Drotaci became more and more vocal about their rights and privileges. We must finally decide whether they have a place in our country or they are simply dangerous particularists."
 
  TD_threatening_our_merchants:0 "Threatening our Merchants"
 
@@ -52,7 +52,7 @@
  wedlan_dual_monarchy_reform:0 "Dual Monarchy"
  wedlan_dual_monarchy_reform_desc:0 "After the position of Marstonian Drotaci was strengthened the state couldn't only focus on appeasing the merchants which led to the equal treatment of all major estates."
 
- wedla.1_insight:0 "This event will allow us to form §YWedla-Marstonia§!."
+ wedla.1_insight:0 "This event will allow us to form §YWedla-Marstonia§!. Different options will be available based on the power of the nobility.\n"
  wedla.1.t:0 "Our Identity"
  wedla.1.desc:0 "Our mainland is not as culturally homogenous as it once was. People of Bogiland, Uzkolia and Marstonia live within our borders and demand more and more representation. Some statesmen and nobles discuss the possibility of crowning our [Root.Monarch.GetTitle] as a king of both Marstonia and Wedla to further show our legitimacy over these lands."
  wedla.1.a:0 "Our Marstonian brothers deserve some autonomy"
