ai buff and postnifthem

--- a/localisation/TD_01_flavour_ehrenia_l_english.yml
+++ b/localisation/TD_01_flavour_ehrenia_l_english.yml
@@ -126,6 +126,9 @@
  td_ehren_civil_war.1.b:0 "Side with Consulists"
  ehren_cw_pro_consul:0 "Pro Consulists"
 
+ ehren_civil_war_ai:0 "AI buffs for civil war"
+ desc_ehren_civil_war_ai:0 "You shouldn't be here."
+
 
  td_ehren_civil_war.50.t:0 "Assasination Attempt"
  td_ehren_civil_war.50.desc:0 "Radical republican elements wants to assasinate Grand Consul so it can cause chaos in pro consulists side and make them lose support. Now we need to choose what we should do with this information."
