--- a/localisation/TD_01_flavour_ehrenia_l_english.yml
+++ b/localisation/TD_01_flavour_ehrenia_l_english.yml
@@ -105,10 +105,10 @@
  cb_war_for_nifthem_desc:0 "We will fight over domination for Nifthemi region"
  wg_war_for_nifthem:0 "War For Nifthem"
  wg_war_for_nifthem_desc:0 "Wargoal is to show our supremacy by winning battles."
- PEACE_po_ehrenstaat_victorious:0 ""
- po_ehrenstaat_victorious_desc:0 ""
- PEACE_po_randwerpen_victorious:0 ""
- po_randwerpen_victorious_desc:0 ""
+ PEACE_po_ehrenstaat_victorious:0 "Conquer Nifthem"
+ po_ehrenstaat_victorious_desc:0 "We will recieve an event to decide about their fate"
+ PEACE_po_randwerpen_victorious:0 "Banish Ehrenstaat"
+ po_randwerpen_victorious_desc:0 "We will take lands that Ehrenstaat hold directly and get an event to decide about fate of their Nifthemi puppets"
  WAR_FOR_NIFTHEM_WN:0 "War For Nifthem"
 
  #### Ehren Civil War
