--- a/localisation/TD_03_missions_wedla_l_english.yml
+++ b/localisation/TD_03_missions_wedla_l_english.yml
@@ -48,6 +48,7 @@
  WED_expand_WGH_quarters_title:0 "Expand the WGH Quarters"
  WED_expand_WGH_quarters_desc:0 "Quarters on the isle of Zirgukalnis have proven to be a great asset in our expansion in the area. We should continue funding it so that it can reach its full potential."
  unlock_decision_WED_expand_WGH_quarters_tt:0 "Enable the '§YExpand the WGH Quarters§!' decision."
+ WGH_trade_power_upgraded:0 "Expanded WGH Quarters"
 
  wedlan_dual_monarchy_reform:0 "Dual Monarchy"
  wedlan_dual_monarchy_reform_desc:0 "After the position of Marstonian Drotaci was strengthened the state couldn't only focus on appeasing the merchants which led to the equal treatment of all major estates."
