hengtua gov loc

--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -3,3 +3,16 @@
  zimahei_kingdom_reform_desc:0 "Governments of Zimahei valley are effective in managing their population, but become less and less effective the larger the population."
  yesun_system_reform:0 "Yesünian System"
  yesun_system_reform_desc:0 "Yesün's Method of keeping the control over Xilei and Ziahei lands was to bleed them dry out of any valuable resources, which proved to be quite effective "
+
+ danshu_school:0 "Danshu"
+ danshu_school_desc:0 "§YPreferred governments:§! Monarchy"
+ taowang_school:0 "Taowang"
+ taowang_school_desc:0 "§YPreferred governments:§! Any"
+ shenting_school:0 "Shenting"
+ shenting_school_desc:0 "§YPreferred governments:§! Theocracy"
+ haanping_school:0 "Haanping"
+ haanping_school_desc:0 "§YPreferred governments:§! Any"
+ hujiming_school:0 "Hujiming"
+ hujiming_school_desc:0 "§YPreferred governments:§! Republic, Plutocracy"
+ taamtau_school:0 "Taamtau"
+ taamtau_school_desc:0 "§YPreferred governments:§! Monarchy"
