--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -634,3 +634,35 @@
  shajinkhor_area:0 "Shajinkhör"
  bulakeshan_area:0 "Bulakeshan"
  hunsei_area:0 "Hunsei"
+
+ heisen_sea_area:0 "Heisen Sea"
+ north_amin_ocean_area:0 "North Amin Ocean"
+ bughaelyu_area:0 "Bughaelyu"
+ gao_area:0 "Gao"
+ jiao_area:0 "Jiao"
+ dencheng_estuary_area:0 "Dencheng Estuary"
+ landan_highlands_area:0 "Landan Highlands"
+ bujan_area:0 "Bujan"
+ mu_valley_area:0 "Mu Valley"
+ inner_dasenli_area:0 "Inner Dasenli"
+ nuodepe_area:0 "Nuodepe"
+ xun_area:0 "Xun"
+ lanxun_area:0 "Lanxun"
+ chenguan_peninsula_area:0 "Chenguan Peninsula"
+ hungkwaak_area:0 "Hungkwaak"
+ hunghaan_area:0 "Hunghaan"
+ hak_area:0 "Hak"
+ south_tsenkung_area:0 "South Tsekung"
+ kwutshaan_area:0 "Kwutshaan"
+ north_tsenkung_area:0 "North Tsenkung"
+ tsui_area:0 "Tsui"
+ tsutan_rainforest_area:0 "Tsutan Rainforest"
+ west_daimin_area:0 "West Daimin"
+ east_daimin_area:0 "East Daimin"
+ lamhoi_area:0 "Lamhoi"
+ north_moongma_area:0 "North Moongma"
+ west_shaantin_area:0 "West Shaantin"
+ east_shaantin_area:0 "East Shaantin"
+ heiling_coast_area:0 "Heiling Coast"
+ yuakwaak_area:0 "Yuakwaak"
+ gui_area:0 "Gui"
