--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -77,6 +77,6 @@
  heisean_tradenode:0 "Heisean"
  caizhu_tradenode:0 "Caizhu"
  huangchan_tradenode:0 "Hangchan"
- xun_tradenode:0 "Xun"
+ xun_tradenode:0 "Desheng"
  zoeng_straits_tradenode:0 "Zoeng Straits"
  hungcho_tradenode:0 "Hungcho"
