--- a/localisation/cradle_of_civilization_l_english.yml
+++ b/localisation/cradle_of_civilization_l_english.yml
@@ -153,9 +153,9 @@
  RELIGIOUS_SCHOOL_NAME:0 "$NAME$"
  WAITING_FOR_X_MORE_PLAYERS:0 "Waiting for $PLAYERS$ more Players"
  RELIGIOUS_SCHOOL_DIPLOMACY_INSTANT:2 "$COUNTRY|Y$ follows the $NAME|Y$ school.\nHas the following relations with other Schools:\n$RELATION$"
- SCHOOL_HATE:0 "Hates"
- SCHOOL_AMBIVALENT:0 "Ambivalent"
- SCHOOL_LIKE:0 "Respect"
+ SCHOOL_HATE:0 "§RHates§!"
+ SCHOOL_AMBIVALENT:0 "§YAmbivalent§!"
+ SCHOOL_LIKE:0 "§GRespect§!"
  SCHOOL_RELATION_LIST_SCHOOL_ENTRY:0 "$SCHOOL$"
  SCHOOL_RELATION_LIST_SCHOOL_ENTRY_PLAYER:0 "$SCHOOL|Y$"
  SCHOOL_RELATION_LIST_ENTRY:0 "$RELATION$: $SCHOOLS$\n"
