--- a/localisation/text_l_english.yml
+++ b/localisation/text_l_english.yml
@@ -240,7 +240,7 @@
  dravidian:0 "Dravidian"
  dutch:0 "Dutch"
  dyola:0 "Dyola"
- east_asian:0 "Chinese"
+ east_asian:0 "Hengtuan"
  east_slavic:0 "East Slavic"
  english:0 "English"
  estonian:0 "Estonian"
@@ -410,7 +410,7 @@
  yemeni_culture:0 "Yemeni"
  yorumba:0 "Yoruba"
  zapotek:0 "Zapotek"
- chinese:0 "Chinese"
+ chinese:0 "Hengtuan"
  lost_cultures_group:0 "Lost Cultures"
  atlantean:0 "Atlantean"
  spartan:0 "Spartan"
