--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -72,6 +72,8 @@
  weixiao_region:0 "Weixiao"
  zimahei_valley_region:0 "Zimahei Valley"
  greater_heisean_region:0 "Greater Heisean"
-
  sahilan_coast_ocean:0 "Sahilan Coast"
  eastern_chantlian_coast_ocean:0 "Northeastern Amin Ocean"
+ tsinhoi_region:0 "Tsinhoi"
+ dasenli_region:0 "Dasenli"
+ east_pemenian_coast_ocean:0 "East Pemenian Coast"
