--- a/localisation/cradle_of_civilization_l_english.yml
+++ b/localisation/cradle_of_civilization_l_english.yml
@@ -155,7 +155,7 @@
  RELIGIOUS_SCHOOL_DIPLOMACY_INSTANT:2 "$COUNTRY|Y$ follows the $NAME|Y$ school.\nHas the following relations with other Schools:\n$RELATION$"
  SCHOOL_HATE:0 "§RHates§!"
  SCHOOL_AMBIVALENT:0 "§YAmbivalent§!"
- SCHOOL_LIKE:0 "§GRespect§!"
+ SCHOOL_LIKE:0 "§GRespects§!"
  SCHOOL_RELATION_LIST_SCHOOL_ENTRY:0 "$SCHOOL$"
  SCHOOL_RELATION_LIST_SCHOOL_ENTRY_PLAYER:0 "$SCHOOL|Y$"
  SCHOOL_RELATION_LIST_ENTRY:0 "$RELATION$: $SCHOOLS$\n"
