--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -28,7 +28,7 @@
  gajifeng_chiefdom_reform:0 "Gajifeng Chiefdom"
  gajifeng_chiefdom_reform_desc:0 "Beautiful jungle of Dasenli made local tribes not only incredibly religious, but also skilled in traversing harsh terrain."
 
- danshu_school:0 "Danshu"
+  danshu_school:0 "Danshu"
  danshu_school_desc:0 "Followers of Danshu School believe that ruler must rule alone and decentralization will only lead to corruption and particularism.\n§YPreferred governments:§! Monarchy"
  taowang_school:0 "Taowang"
  taowang_school_desc:0 "Followers of Taowang School believe that nature and natural order are much more sacred compared to the other schools and thus ruler's duty is to protect nature and avoid interventing in people's lives.\n§YPreferred governments:§! Any"
@@ -37,9 +37,9 @@
  haanping_school:0 "Haanping"
  haanping_school_desc:0 "Followers of the Haanping school believe that a good ruler must be be an eloquent diplomant or a poet and only resolve conflict through mediation rather than force.\n§YPreferred governments:§! Any"
  hujiming_school:0 "Hujiming"
- hujiming_school_desc:0 "Followers of the Hujiming school believe that order is the highest priority, even at the cost of individual freedom\n§YPreferred governments:§! Republic, Plutocracy"
+ hujiming_school_desc:0 "Followers of the Hujiming school believe that the power and status shouldn't come from heaven, gods or inheritance, but rather from the ones skill and efforts.\n§YPreferred governments:§! Republic, Plutocracy"
  taamtau_school:0 "Taamtau"
- taamtau_school_desc:0 "Followers of the Taamtau school believe that the power and status shouldn't come from heaven, gods or inheritance, but rather from the ones skill and efforts.\n§YPreferred governments:§! Monarchy"
+ taamtau_school_desc:0 "Followers of the Taamtau school believe that order is the highest priority, even at the cost of individual freedom.\n§YPreferred governments:§! Monarchy"
 
  can_pick_spirit_tt:0 "This ruler did NOT pick a spirit yet."
 
@@ -56,3 +56,80 @@
  patron_kwaazim_spirit:0 "Kwaazim Spirits"
  patron_sengfu_spirit:0 "Sengfu Spirit"
  patron_daimin_spirit:0 "Daimin Spirit"
+
+ CITY:0 "City"
+ KIT_TSAN:0 "Kit-Ts'an"
+ HIGH_REPUBLIC:0 "High Republic"
+ TSOI_HAI:0 "Tsoi-Hai"
+ GREAT_TSOI_HAI:0 "Great Tsoi-Hai"
+ ZHUQUAN:0 "Zhuquan"
+ GREAT_ZHUQUAN:0 "Great Zhuquan"
+
+
+ GREAT_GUI:0 "Great Gui"
+ GREAT_GUI_ADJ:0 "Great Gui"
+ GREAT_GAO:0 "Great Gao"
+ GREAT_GAO_ADJ:0 "Great Gao"
+ GREAT_JIA:0 "Great Jiao"
+ GREAT_JIA_ADJ:0 "Great Jiao"
+ GREAT_XUN:0 "Great Xun"
+ GREAT_XUN_ADJ:0 "Great Xun"
+ GREAT_YAU:0 "Great Yau"
+ GREAT_YAU_ADJ:0 "Great Yau"
+ GREAT_LAA:0 "Great Lam"
+ GREAT_LAA_ADJ:0 "Great Lam"
+ GREAT_DAA:0 "Great Dai"
+ GREAT_DAA_ADJ:0 "Great Dai"
+ GREAT_UET:0 "Great Uet"
+ GREAT_UET_ADJ:0 "Great Uet"
+ GREAT_SUU:0 "Great Su"
+ GREAT_SUU_ADJ:0 "Great Su"
+ GREAT_TSU:0 "Great Tsui"
+ GREAT_TSU_ADJ:0 "Great Tsui"
+ GREAT_FUN:0 "Great Fung"
+ GREAT_FUN_ADJ:0 "Great Fung"
+ GREAT_MAN:0 "Great Maan"
+ GREAT_MAN_ADJ:0 "Great Maan"
+ GREAT_HAK:0 "Great Hak"
+ GREAT_HAK_ADJ:0 "Great Hak"
+ GREAT_ZUE:0 "Great Zue"
+ GREAT_ZUE_ADJ:0 "Great Zue"
+ GREAT_YEU:0 "Great Yeung"
+ GREAT_YEU_ADJ:0 "Great Yeung"
+ GREAT_ZOE:0 "Great Zoeng"
+ GREAT_ZOE_ADJ:0 "Great Zoeng"
+ GREAT_ZHE:0 "Great Zhe"
+ GREAT_ZHE_ADJ:0 "Great Zhe"
+ GREAT_XIE:0 "Great Xi"
+ GREAT_XIE_ADJ:0 "Great Xi"
+ GREAT_TOG:0 "Great Tong"
+ GREAT_TOG_ADJ:0 "Great Tong"
+ GREAT_LIN:0 "Great Lin"
+ GREAT_LIN_ADJ:0 "Great Lin"
+ GREAT_HNS:0 "Great Huns"
+ GREAT_HNS_ADJ:0 "Great Huns"
+ GREAT_CAI:0 "Great Cai"
+ GREAT_CAI_ADJ:0 "Great Caian"
+ GREAT_MMM:0 "Great Mau"
+ GREAT_MMM_ADJ:0 "Great Mauan"
+
+ embrace_zheng_decision_title:0 "Embrace Hengtuan Religion"
+ embrace_zheng_decision_desc:0 "We lived next to Hengtuans for generations. Maybe it's time to convert to their faith?"
+ hengtua.1.t:0 "Choosing our cult"
+ hengtua.1.desc:0 "With official conversion to hengtuan religion there is a choice we have to make. There are 3 major branches of this religion - Xianga, Xifang and Zimahei cult. which of these will be our preffered sect?"
+ secondary_less_stab:0 "Thanks to this religion being our secondary, we will lose less stability."
+ hengtua.1.a:0 "Zimahei Cult"
+ hengtua.1.b:0 "Xianga"
+ hengtua.1.c:0 "Xifang"
+ hengtua_abandoned_roots:0 "Abandoned Roots"
+ hengtua_true_faith_ruler:0 "True Faith Ruler"
+
+ hengtua.100.t:0 "Choosing our philosophy"
+ hengtua.100.desc:0 "Changing situation in our country led us to a crossroad where we must select our path. From hundreds of schools of Hengtuan philosophy there remain 6 which are of great influence. Which of these shall build our nation?"
+ hengtua.100.a:0 "I'm a bot beep bop"
+ hengtua.100.b:0 "Taamtau School"
+ hengtua.100.C:0 "Danshu School"
+ hengtua.100.d:0 "Taowang School"
+ hengtua.100.e:0 "Hujiming School"
+ hengtua.100.f:0 "Shenting School"
+ hengtua.100.g:0 "Haanping School"
