--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -118,3 +118,12 @@
 
  heisean_nation_title:0 "Reunite Heisean @HEI"
  heisean_nation_desc:0 "Warring states of Heisean have been relentlessly fighting each other for the past century. Now we will restore the mantle of Great Heisean."
+
+ khantadun_nation_title:0 "Unite Khantadun @KHA"
+ khantadun_nation_desc:0 "Safe valley of Khantadun allowed us to prosper without the need of major conflicts which lead to massive decentralization, but if we want to break free from Paraderavi control we must unite."
+
+ shou_nation_title:0 "Supremacy over Zimahei @SHO"
+ shou_nation_desc:0 "History has shown that Zimahei warlords can barely run their courts, let alone an entire country. We must bring order to these lands and exploit them for their own good."
+
+ great_dynasty_nation_title:0 "Show our Superiority"
+ great_dynasty_nation_desc:0 "We have grown beyond our small homeland. We are great!"
