--- a/localisation/TD_03_missions_generic_l_english.yml
+++ b/localisation/TD_03_missions_generic_l_english.yml
@@ -236,3 +236,5 @@
 
  every_province_meeting_the_criteria_tt:0 "Every province meeting the criteria will get:"
  every_province_in_this_group_tt:0 "Every province in this province group will get:"
+ every_owned_province_true_faith_tt:0 "Every owned province of true faith will get:"
+ every_province_of_old_religion_tt:0 "Every owned province of abandoned faith will get:"
