--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -396,6 +396,6 @@
  east_hengtuan_group:0 "Tsinhoi"
  beidao:0 "Beidao"
  huangche:0 "Huangche"
- tsekung:0 "Tsekugn"
+ tsekung:0 "Tsekung"
  luetan:0 "Luetan"
  daimin:0 "Daimin"
