--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -758,7 +758,7 @@
  PAS:0 "Pascimahed"
  PAS_ADJ:0 "Pascimahedi"
  KOT:0 "Kottamalliram"
- KOT_ADJ:0 "KOttamallirami"
+ KOT_ADJ:0 "Kottamallirami"
  PUK:0 "Pukralitam"
  PUK_ADJ:0 "Pukralitami"
  PUT:0 "Puttariram"
@@ -923,8 +923,8 @@
  TOG_ADJ:0 "Tong"
  LIN:0 "Lin"
  LIN_ADJ:0 "Lin"
- HEN:0 "Hen"
- HEN_ADJ:0 "Hen"
+ HEN:0 "Great Heng"
+ HEN_ADJ:0 "Great Heng"
  BAN:0 "Banasan"
  BAN_ADJ:0 "Banagi"
  BAS:0 "Bashipista"
@@ -1020,3 +1020,6 @@
  YEU_ADJ:0 "Yeung"
  ZOE:0 "Zoeng"
  ZOE_ADJ:0 "Zoeng"
+ 
+ SHO:0 "Great Shou"
+ SHO_ADJ:0 "Great Shou"
