--- a/localisation/cradle_of_civilization_l_english.yml
+++ b/localisation/cradle_of_civilization_l_english.yml
@@ -157,7 +157,7 @@
  SCHOOL_AMBIVALENT:0 "§YAmbivalent§!"
  SCHOOL_LIKE:0 "§GRespects§!"
  SCHOOL_RELATION_LIST_SCHOOL_ENTRY:0 "$SCHOOL$"
- SCHOOL_RELATION_LIST_SCHOOL_ENTRY_PLAYER:0 "$SCHOOL|Y$"
+ SCHOOL_RELATION_LIST_SCHOOL_ENTRY_PLAYER:0 "$SCHOOL|C$"
  SCHOOL_RELATION_LIST_ENTRY:0 "$RELATION$: $SCHOOLS$\n"
  religious_school_relation:0 "Religious School Relation"
  same_religious_school_relation:0 "Same Religious School"
