--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -17,7 +17,7 @@
  PROV_ADJ16:0 "Newmenz"
  PROV_ADJ17:0 "Bay of Nifthem"
  PROV_ADJ18:0 "Zeschburg"
- PROV_ADJ19:0 "Ziemielian Bay"
+ PROV_ADJ19:0 "Ziemelian Bay"
  PROV_ADJ20:0 "Lerhue"
  PROV_ADJ21:0 "Itelbronn"
  PROV_ADJ22:0 "Risholz"
