--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -17,7 +17,7 @@
  PROV16:0 "Newmenz"
  PROV17:0 "Bay of Nifthem"
  PROV18:0 "Zeschburg"
- PROV19:0 "Ziemielian Bay"
+ PROV19:0 "Ziemelian Bay"
  PROV20:0 "Lerhue"
  PROV21:0 "Itelbronn"
  PROV22:0 "Risholz"
