ideas and institutions

--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -356,7 +356,7 @@
  wugecho:0 "Wugecho"
  yudeza:0 "Yudeza"
 
- hengtuan_group:0 "Hengtuan"
+ hengtuan_group:0 "Heiling"
  xilei:0 "Xilei"
  ziahei:0 "Ziahei"
  xun:0 "Xun"
