--- a/localisation/TD_prov_modifiers_l_english.yml
+++ b/localisation/TD_prov_modifiers_l_english.yml
@@ -21,6 +21,10 @@
  sipiwimekya_estuary_modifier:0 "Sipiwimekya Estuary"
  moorfluss_estuary_modifier:0 "Moorfluss Estuary"
  nanatoyatl_estuary_modifier:0 "Nanatoyatl Estuary"
+ zimahey_estuary_modifier:0 "Zimahey Estuary"
+ desheng_estuary_modifier:0 "Desheng Estuary"
+ eolumgil_estuary_modifier:0 "Eolumgil Estuary"
+ khanta_estuary_modifier:0 "Khanta Estuary"
 
  uzkolian_toll:0 "Uzkolian Toll"
  hre_imperial_road:0 "Imperial Road"
