--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -41,7 +41,7 @@
  eastern_chantlian_coast_region:0 "Mathilda's Bay"
  northern_niheyan_ocean:0 "Northern Niheyan Ocean"
  western_niheyan_ocean:0 "Western Niheyan Ocean"
- eastern_amin_ocean:0 "Eastern Amin Ocean"
+ eastern_amin_ocean:0 "Southeastern Amin Ocean"
  thiccet_region:0 "Thiccet"
  visparaya_region:0 "Visparaya"
  qawartia_region:0 "Qawartia"
