--- a/localisation/domination_l_english.yml
+++ b/localisation/domination_l_english.yml
@@ -2359,8 +2359,8 @@
  devshirme_assign_local_pashas_at:0 "Every owned, §YHeathen§! province gains the following effects:"
  elective_monarchy_reform:0 "Elective Monarchy"
  elective_monarchy_reform_desc:0 "Elective monarchies choose their heir instead of having them come to power through a succession law. The nobility can propose a candidate from a foreign dynasty, from their own midst or other members of the royal family."
- mechanic_has_ruler_election_yes:0 "Has §YRule Election§! when a new ruler ascends the throne"
- mechanic_has_improved_ruler_election_yes:0 "Increase the skills of candidates of the §YRule Election§!"
+ mechanic_has_ruler_election_yes:0 "Has §YRuler Election§! when a new ruler ascends the throne"
+ mechanic_has_improved_ruler_election_yes:0 "Increase the skills of candidates of the §YRuler Election§!"
  mechanic_cheaper_coastal_province_core_yes:0 "Coastal provinces cost §G-10.0%§! Governing Capacity and §G-25.0%§! to turn them into core provinces"
  british_monarchy:0 "British Monarchy"
  british_monarchy_desc:0 "The natural evolution of the English Monarchy and the Scottish government. The parliaments of both states have been unified into the parliament of Great Britain."
@@ -3569,6 +3569,7 @@
  commercial_enterprise_overlord:0 "Commercial Enterprise Overlord"
  commercial_enterprise_subject:0 "Commercial Enterprise Subject"
  commercial_enterprise_is_our:0 "§Y$NAME$§! is our Commercial Enterprise"
+ commercial_enterprise_no_overlord_dow:0 "We may not declare war on our Commercial Enterprise subjects."
  trade_protectorate:0 "Trade Protectorate"
  trade_protectorate_long_desc:0 "A trade protectorate is a relationship between a strong maritime power with a weaker local realm. The subject transfers all trade influence to their overlord in return for their protection. Although a subject relationship, trade protectorates act autonomously and can break the trade agreement with their overlord."
  trade_protectorate_title:0 "Trade Protectorate"
