--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2596,9 +2596,9 @@
  PROV2595:0 "2595"
  PROV2596:0 "2596"
  PROV2597:0 "2597"
- PROV2598:0 "2598"
- PROV2599:0 "2599"
- PROV2600:0 "2600"
+ PROV2598:0 "Chamnam Bay"
+ PROV2599:0 "Beidao Coast"
+ PROV2600:0 "Desheng Bay"
  PROV2601:0 "2601"
  PROV2602:0 "2602"
  PROV2603:0 "2603"
@@ -3121,14 +3121,14 @@
  PROV3120:0 "3120"
  PROV3121:0 "3121"
  PROV3122:0 "3122"
- PROV3123:0 "3123"
+ PROV3123:0 "Gengshan"
  PROV3124:0 "3124"
  PROV3125:0 "3125"
  PROV3126:0 "3126"
  PROV3127:0 "3127"
- PROV3128:0 "3128"
- PROV3129:0 "3129"
- PROV3130:0 "3130"
+ PROV3128:0 "Gengshan"
+ PROV3129:0 "Xiashan"
+ PROV3130:0 "Xiashan"
  PROV3131:0 "3131"
  PROV3132:0 "3132"
  PROV3133:0 "3133"
@@ -3230,13 +3230,13 @@
  PROV3229:0 "3229"
  PROV3230:0 "3230"
  PROV3231:0 "3231"
- PROV3232:0 "3232"
+ PROV3232:0 "Huangjie"
  PROV3233:0 "3233"
- PROV3234:0 "3234"
+ PROV3234:0 "Pakgang"
  PROV3235:0 "3235"
  PROV3236:0 "3236"
- PROV3237:0 "3237"
- PROV3238:0 "3238"
+ PROV3237:0 "Waanan"
+ PROV3238:0 "Langsheng"
  PROV3239:0 "3239"
  PROV3240:0 "3240"
  PROV3241:0 "3241"
