religious icons + flags + ideas + fixes

--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -3121,7 +3121,7 @@
  PROV3120:0 "3120"
  PROV3121:0 "3121"
  PROV3122:0 "3122"
- PROV3123:0 "Gengshan"
+ PROV3123:0 "3123"
  PROV3124:0 "3124"
  PROV3125:0 "3125"
  PROV3126:0 "3126"
@@ -3131,7 +3131,7 @@
  PROV3130:0 "Xiashan"
  PROV3131:0 "3131"
  PROV3132:0 "3132"
- PROV3133:0 "3133"
+ PROV3133:0 "Gengshan"
  PROV3134:0 "3134"
  PROV3135:0 "3135"
  PROV3136:0 "3136"
@@ -3285,7 +3285,7 @@
  PROV3284:0 "3284"
  PROV3285:0 "3285"
  PROV3286:0 "3286"
- PROV3287:0 "3287"
+ PROV3287:0 "Badagang"
  PROV3288:0 "3288"
  PROV3289:0 "3289"
  PROV3290:0 "3290"
