donucakar gov reform + fisheries changes

--- a/localisation/TD_01_flavour_donucakar_l_english.yml
+++ b/localisation/TD_01_flavour_donucakar_l_english.yml
@@ -16,3 +16,6 @@
  donucakar_yanlan_monasteries_desc:0 "Yanlan Monasteries are almost as old as the kingdom itself. They are usually carved in the mountainsides or cliffs with farms and vineyards in the neighbouring hills. Monks that live there lead a simple life of prayer and work, inspiring our people to do the same,"
  donucakar_bulwark_of_sigilianism:0 "Bulwark of Sigilianism"
  donucakar_bulwark_of_sigilianism_desc:0 "But sometimes prayers don't work and instead more direct measures need to be taken. We cannot allow even a step back into our territory while fighting the heretics. We will protect the kingdom and the Empire to the last man standing."
+
+ sugilin_kingdom_reform:0 "Sügilin Kingdom"
+ sugilin_kingdom_reform_desc:0 "Open-arms approach to the new faith of Saelianism in early history of Donuçakar has led to the strengthened position of the clergy."
