gov reform + setup changes

--- a/localisation/TD_01_flavour_bogiland_l_english.yml
+++ b/localisation/TD_01_flavour_bogiland_l_english.yml
@@ -38,3 +38,6 @@
  wedla_wedlan_glass_desc:0 "Togawian glassmakers are famous for their artistry relating to common life in our lands. Being made from the refined sand gives them a unique look which makes them very popular amongst the western nobility, which sees it as piece of 'oriental' culture."
  wedla_lessons_of_war:0 "Lessons of War"
  wedla_lessons_of_war_desc:0 "Frequent and brutal clashes with Ziemelians made our military very prone to adjust their strategy to achieve the least amount of losses to grant up the upper hand in the next war. Each battle is thoroughly studied and the knowledge is passed down to the new military leaders. This was greatly shown during our involvement in the League of Lippstadt and by our soldiers for hire during Mercenary Wars."
+
+ zbojaner_kingdom_reform:0 "Zbojaner Kingdom"
+ zbojaner_kingdom_reform_desc:0 "Local Zbojaner nobles are far less likely to accept new ideals and would rather keep the status quo intact."
