prov names + monument

--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -85,4 +85,7 @@
  terolian_mining_district:0 "Terolian Mining District"
 
  erekle_tsikhe:0 "Erek'les tsikhe"
- erekle_tsikhe_desc:0 "Greatest fortification in the old world, build by the great king Erekle"
+ erekle_tsikhe_desc:0 "Greatest fortification in the old world, build by the great king Erekle."
+
+ shinkhot:0 "Shinkhot"
+ shinkhot_desc:0 "Important trade hub during the golden age of Bunelisuli Empire."
