--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1185,7 +1185,7 @@
  PROV1184:0 "Yaglyz"
  PROV1185:0 "Eltym"
  PROV1186:0 "1186"
- PROV1187:0 "1187"
+ PROV1187:0 "Khoosontol"
  PROV1188:0 "1188"
  PROV1189:0 "Miskarab"
  PROV1190:0 "Lanta"
@@ -1847,7 +1847,7 @@
  PROV1846:0 "Tarhianahcoill"
  PROV1847:0 "1847"
  PROV1848:0 "1848"
- PROV1849:0 "1849"
+ PROV1849:0 "Nogoontengis"
  PROV1850:0 "1850"
  PROV1851:0 "1851"
  PROV1852:0 "1852"
@@ -2113,7 +2113,7 @@
  PROV2112:0 "Golÿamtu"
  PROV2113:0 "Äñetpar"
  PROV2114:0 "Tugär"
- PROV2115:0 "Zunaram"
+ PROV2115:0 "Zuwaran"
  PROV2116:0 "Sükara"
  PROV2117:0 "Msytar"
  PROV2118:0 "Täsarakün"
@@ -2164,17 +2164,17 @@
  PROV2163:0 "2163"
  PROV2164:0 "2164"
  PROV2165:0 "2165"
- PROV2166:0 "2166"
- PROV2167:0 "2167"
+ PROV2166:0 "Smalkar"
+ PROV2167:0 "Smalkar"
  PROV2168:0 "Kapran"
- PROV2169:0 "2169"
+ PROV2169:0 "Süüliinbar"
  PROV2170:0 "Yenisar"
  PROV2171:0 "Dazlum"
  PROV2172:0 "Mäkrwah"
- PROV2173:0 "2173"
+ PROV2173:0 "Butkhuaran"
  PROV2174:0 "Ÿaçagyl"
  PROV2175:0 "2175"
- PROV2176:0 "2176"
+ PROV2176:0 "Khoibom"
  PROV2177:0 "Ÿaçagyl"
  PROV2178:0 "Vitasla"
  PROV2179:0 "Bäkälum"
@@ -2186,16 +2186,16 @@
  PROV2185:0 "Mäshlid"
  PROV2186:0 "Yüqmay"
  PROV2187:0 "Mikra"
- PROV2188:0 "2188"
+ PROV2188:0 "Gugbulsh"
  PROV2189:0 "2189"
- PROV2190:0 "2190"
- PROV2191:0 "2191"
- PROV2192:0 "2192"
+ PROV2190:0 "Tengikhar"
+ PROV2191:0 "Jigsür"
+ PROV2192:0 "Khavrytol"
  PROV2193:0 "2193"
  PROV2194:0 "2194"
  PROV2195:0 "2195"
- PROV2196:0 "2196"
- PROV2197:0 "2197"
+ PROV2196:0 "Shinkhot"
+ PROV2197:0 "Bayajutol"
  PROV2198:0 "2198"
  PROV2199:0 "2199"
  PROV2200:0 "2200"
@@ -2693,7 +2693,7 @@
  PROV2692:0 "2692"
  PROV2693:0 "Gavalur"
  PROV2694:0 "2694"
- PROV2695:0 "2695"
+ PROV2695:0 "Büüloporpost"
  PROV2696:0 "2696"
  PROV2697:0 "2697"
  PROV2698:0 "2698"
@@ -2703,7 +2703,7 @@
  PROV2702:0 "2702"
  PROV2703:0 "2703"
  PROV2704:0 "2704"
- PROV2705:0 "2705"
+ PROV2705:0 "Khuruulvar"
  PROV2706:0 "Gemek"
  PROV2707:0 "2707"
  PROV2708:0 "2708"
@@ -3115,7 +3115,7 @@
  PROV3114:0 "3114"
  PROV3115:0 "3115"
  PROV3116:0 "3116"
- PROV3117:0 "3117"
+ PROV3117:0 "Domaxud"
  PROV3118:0 "3118"
  PROV3119:0 "3119"
  PROV3120:0 "3120"
@@ -3139,15 +3139,15 @@
  PROV3138:0 "3138"
  PROV3139:0 "3139"
  PROV3140:0 "3140"
- PROV3141:0 "3141"
- PROV3142:0 "3142"
+ PROV3141:0 "Gözdyr"
+ PROV3142:0 "Yabantok"
  PROV3143:0 "3143"
  PROV3144:0 "3144"
  PROV3145:0 "3145"
  PROV3146:0 "3146"
  PROV3147:0 "3147"
  PROV3148:0 "3148"
- PROV3149:0 "3149"
+ PROV3149:0 "Ginişalk"
  PROV3150:0 "3150"
  PROV3151:0 "3151"
  PROV3152:0 "3152"
