--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2031,7 +2031,7 @@
  PROV2030:0 "Zayamar"
  PROV2031:0 "Sumawat"
  PROV2032:0 "2032"
- PROV2033:0 "2033"
+ PROV2033:0 "Gümatar"
  PROV2034:0 "North Sazugarat"
  PROV2035:0 "2035"
  PROV2036:0 "2036"
