--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -127,3 +127,6 @@
 
  great_dynasty_nation_title:0 "Show our Superiority"
  great_dynasty_nation_desc:0 "We have grown beyond our small homeland. We are great!"
+
+ shuuduragis_nation_title:0 "Reunite Shüüduraga @SHD"
+ shuuduragis_nation_desc:0 "After Atkiray Khan split the eastern realm between himself and his brother, many we sure that this state would return some semblance of stability, but only true unity can bring us glory and prosperity."
