--- a/localisation/TD_01_flavour_bunelisuli_l_english.yml
+++ b/localisation/TD_01_flavour_bunelisuli_l_english.yml
@@ -5,3 +5,6 @@
  bunelisuli_empire_reform_desc:0 "Quick spread of information and suppression of any threat are major pillars of Bunelisuli government."
  bunelisuli_empire_decision_title:0 "Restore our Empire"
  bunelisuli_empire_decision_desc:0 "Fall of Bunelisuli Empire in 1432 plunged us into many years of infighting. Now we can restore our glory!"
+
+ khumaarati_tribe_reform:0 "Khumaarati Tribe"
+ khumaarati_tribe_reform_desc:0 "Khumaarati tribes have maintained a close relations with Bunelisuli states."
