--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -2595,7 +2595,7 @@
  PROV2594:0 "2594"
  PROV2595:0 "2595"
  PROV2596:0 "2596"
- PROV2597:0 "2597"
+ PROV2597:0 "Gongjag Strait"
  PROV2598:0 "Chamnam Bay"
  PROV2599:0 "Beidao Coast"
  PROV2600:0 "Desheng Bay"
@@ -2622,11 +2622,11 @@
  PROV2621:0 "2621"
  PROV2622:0 "2622"
  PROV2623:0 "2623"
- PROV2624:0 "2624"
+ PROV2624:0 "Lamhoi Coast"
  PROV2625:0 "2625"
  PROV2626:0 "2626"
  PROV2627:0 "2627"
- PROV2628:0 "2628"
+ PROV2628:0 "Laamen Sea"
  PROV2629:0 "2629"
  PROV2630:0 "2630"
  PROV2631:0 "2631"
@@ -2636,10 +2636,10 @@
  PROV2635:0 "2635"
  PROV2636:0 "2636"
  PROV2637:0 "2637"
- PROV2638:0 "2638"
- PROV2639:0 "2639"
+ PROV2638:0 "Daimin Strait"
+ PROV2639:0 "Paau Sea"
  PROV2640:0 "Radoriasan Rainforest"
- PROV2641:0 "2641"
+ PROV2641:0 "South Laamen Sea"
  PROV2642:0 "2642"
  PROV2643:0 "2643"
  PROV2644:0 "2644"
@@ -2657,14 +2657,14 @@
  PROV2656:0 "2656"
  PROV2657:0 "2657"
  PROV2658:0 "2658"
- PROV2659:0 "2659"
+ PROV2659:0 "Guang Strait"
  PROV2660:0 "2660"
  PROV2661:0 "2661"
  PROV2662:0 "2662"
  PROV2663:0 "2663"
  PROV2664:0 "2664"
  PROV2665:0 "2665"
- PROV2666:0 "2666"
+ PROV2666:0 "Coast of Yau"
  PROV2667:0 "2667"
  PROV2668:0 "2668"
  PROV2669:0 "2669"
@@ -2679,7 +2679,7 @@
  PROV2678:0 "2678"
  PROV2679:0 "2679"
  PROV2680:0 "2680"
- PROV2681:0 "2681"
+ PROV2681:0 "Central Tsinhoi Gulf"
  PROV2682:0 "2682"
  PROV2683:0 "2683"
  PROV2684:0 "2684"
@@ -3316,7 +3316,7 @@
  PROV3315:0 "3315"
  PROV3316:0 "3316"
  PROV3317:0 "3317"
- PROV3318:0 "3318"
+ PROV3318:0 "Desheng"
  PROV3319:0 "3319"
  PROV3320:0 "3320"
  PROV3321:0 "3321"
@@ -3360,8 +3360,8 @@
  PROV3359:0 "3359"
  PROV3360:0 "3360"
  PROV3361:0 "3361"
- PROV3362:0 "3362"
- PROV3363:0 "3363"
+ PROV3362:0 "Chengcheng"
+ PROV3363:0 "Densheng"
  PROV3364:0 "3364"
  PROV3365:0 "3365"
  PROV3366:0 "3366"
@@ -3383,7 +3383,7 @@
  PROV3382:0 "3382"
  PROV3383:0 "3383"
  PROV3384:0 "3384"
- PROV3385:0 "3385"
+ PROV3385:0 "Daifan"
  PROV3386:0 "3386"
  PROV3387:0 "3387"
  PROV3388:0 "3388"
