--- a/localisation/TD_prov_modifiers_l_english.yml
+++ b/localisation/TD_prov_modifiers_l_english.yml
@@ -22,7 +22,7 @@
  moorfluss_estuary_modifier:0 "Moorfluss Estuary"
  nanatoyatl_estuary_modifier:0 "Nanatoyatl Estuary"
  zimahey_estuary_modifier:0 "Zimahey Estuary"
- desheng_estuary_modifier:0 "Desheng Estuary"
+ dencheng_estuary_modifier:0 "Dencheng Estuary"
  eolumgil_estuary_modifier:0 "Eolumgil Estuary"
  khanta_estuary_modifier:0 "Khanta Estuary"
 
