--- a/localisation/TD_01_Flavour_Hengtua_l_english.yml
+++ b/localisation/TD_01_Flavour_Hengtua_l_english.yml
@@ -20,7 +20,7 @@
  luetan_monarchy_reform:0 "Luetan Monarchy"
  luetan_monarchy_reform_desc:0 "This governments is heavily influenced by Taowang philosophy and Tsutan believes in greatness of nature and human ecosystem, trying to keep it intact."
  beidao_alliance_reform:0 "Beidao Alliance"
- beidao_alliance_reform_desc:0 "Cities of northern Heiling formed a tight alliance with a single electable leader to protect against northern hordes and southern regimes."
+ beidao_alliance_reform_desc:0 "Cities of northern Henling formed a tight alliance with a single electable leader to protect against northern hordes and southern regimes."
  tszelapsheng_reform:0 "Tszelapsheng"
  tszelapsheng_reform_desc:0 "Eastern Tsutan was historically compromised of various city-states of which only 2 survived to this day, keeping the tradition of commerce and maritime influence."
  kaansuentin_reform:0 "Kaansuentin"
