--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -666,7 +666,7 @@
  north_moongma_area:0 "North Moongma"
  west_shaantin_area:0 "West Shaantin"
  east_shaantin_area:0 "East Shaantin"
- heiling_coast_area:0 "Heiling Coast"
+ henling_coast_area:0 "Henling Coast"
  yuakwaak_area:0 "Yuakwaak"
  gui_area:0 "Gui"
  kwaazim_forest_area:0 "Kwaazim Forest"
