--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -71,7 +71,7 @@
  paredesh_tradenode:0 "Paredesh"
  bugtang_tradenode:0 "Bugtang"
  weixiao_tradenode:0 "Weixiao"
- zimahei_estuary_tradenode:0 "Zimahei Estuary"
+ henling_coast_tradenode:0 "Henling Coast"
  xilei_tradenode:0 "Xilei"
  eoduunso_tradenode:0 "Eoduunso"
  heisean_tradenode:0 "Heisean"
